@@ -1,5 +1,9 @@
 2001-11-05  Ulrich Drepper  <drepper@redhat.com>
 
+	* elf/rtld.c (process_dl_debug): Rewritten.  Optimized for size not
+	speed.
+	(process_envvars): More some optimizations.
+
 	* elf/elf.h: Add dynamic tag definitions for prelinking.
 
 	* elf/rtld.c (process_envvars): Avoid using array of string pointers.
